--- a/app.yaml
+++ b/app.yaml
@@ -1,4 +1,4 @@
-application: sports-bar-finder
+application: sportsbarfinder
 version: 1
 runtime: python27
 api_version: 1
@@ -7,3 +7,7 @@ threadsafe: true
 handlers:
 - url: /.*
   script: main.application
+
+libraries:
+- name: webob
+  version: "1.1.1"
