If bar isn't found, try yelp and validate with foursquare.

--- a/app.yaml
+++ b/app.yaml
@@ -1,11 +1,11 @@
-application: sportsbarfinder
+application: sports-bar-finder
 version: 1
 runtime: python27
 api_version: 1
 threadsafe: true
 
 handlers:
-- url: /.*
+- url: .*
   script: main.application
 
 libraries:
